--- a/openGL/ch04/makefile
+++ b/openGL/ch04/makefile
@@ -1,3 +1,5 @@
 basic: 
 	g++ basic.cxx -o basic.out -lGL -lGLU -lglut
 
+my_first_shader:
+	g++ my_first_shader.cxx -o my_first_shader.out -lGL -lGLU -lglut -lGLEW
