:recycle: 1239: 拿掉 unordered_map 反而比較快

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,8 @@
     "numeric": "cpp",
     "random": "cpp",
     "shared_mutex": "cpp",
-    "list": "cpp"
+    "list": "cpp",
+    "forward_list": "cpp"
   },
   "cSpell.words": ["leetcode"],
   "workbench.colorCustomizations": {
