--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,8 @@
     "random": "cpp",
     "shared_mutex": "cpp",
     "list": "cpp",
-    "forward_list": "cpp"
+    "forward_list": "cpp",
+    "valarray": "cpp"
   },
   "cSpell.words": ["leetcode"],
   "workbench.colorCustomizations": {
