--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,9 @@
     "shared_mutex": "cpp",
     "list": "cpp",
     "forward_list": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "variant": "cpp",
+    "scoped_allocator": "cpp"
   },
   "cSpell.words": ["leetcode"],
   "workbench.colorCustomizations": {
@@ -79,10 +81,7 @@
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#cd212a99",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "editorGroup.border": "#e04149",
-    "panel.border": "#e04149",
     "sash.hoverBorder": "#e04149",
-    "sideBar.border": "#e04149",
     "statusBarItem.remoteBackground": "#cd212a",
     "statusBarItem.remoteForeground": "#e7e7e7"
   },
