:sparkles: 122: 與同事快樂刷 leetcode 的日子越來越少了

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,7 +63,9 @@
     "forward_list": "cpp",
     "valarray": "cpp",
     "variant": "cpp",
-    "scoped_allocator": "cpp"
+    "scoped_allocator": "cpp",
+    "future": "cpp",
+    "complex": "cpp"
   },
   "cSpell.words": ["leetcode"],
   "workbench.colorCustomizations": {
