--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "leetcode": "node leetcode/cmd.mjs"
   },
   "dependencies": {
-    "axios": "^0.22.0"
+    "axios": "^0.22.0",
+    "chalk": "^5.0.0"
   },
   "license": "Beerware"
 }
