:sparkles: 改看 learnopengl.com 繼續覺 OpenGL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,8 @@
     "cuchar": "cpp",
     "mutex": "cpp",
     "thread": "cpp",
-    "typeindex": "cpp"
+    "typeindex": "cpp",
+    "glad.c": "cpp"
   },
   "cSpell.words": ["leetcode"],
   "workbench.colorCustomizations": {
