:sparkles: 2023/9/18 一些之前自學的 markdown 檔

--- a/openGL_ebook/part_1/makefile
+++ b/openGL_ebook/part_1/makefile
@@ -1,2 +1,5 @@
 hello_window:
 	g++ hello_window.cxx glad.c -o hello_window.out -lglfw -lGL -ldl
+
+hello_triangle:
+	g++ hello_triangle.cxx glad.c -o hello_triangle.out -lglfw -lGL -ldl
