--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,15 +98,14 @@
     "locale": "cpp",
     "__functional_base": "cpp",
     "__verbose_abort": "cpp",
-    "climits": "cpp"
+    "climits": "cpp",
+    "xlocnum": "cpp",
+    "xhash": "cpp",
+    "xtree": "cpp",
+    "xstring": "cpp",
+    "xutility": "cpp"
   },
-  "cSpell.words": [
-    "Khronos",
-    "leetcode",
-    "nums",
-    "Subarray",
-    "Subseq"
-  ],
+  "cSpell.words": ["Khronos", "leetcode", "nums", "Subarray", "Subseq"],
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#e04149",
     "activityBar.activeBorder": "#2ddb24",
@@ -127,6 +126,5 @@
     "statusBarItem.remoteForeground": "#e7e7e7",
     "commandCenter.border": "#e7e7e799"
   },
-  "peacock.color": "#cd212a",
-  "C_Cpp.default.compilerPath": "/usr/bin/g++"
+  "peacock.color": "#cd212a"
 }
