🔧 更新 vscode peacock 顏色

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,25 +117,25 @@
   },
   "cSpell.words": ["Khronos", "leetcode", "nums", "Subarray", "Subseq"],
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#e04149",
+    "activityBar.activeBackground": "#ff6433",
     "activityBar.activeBorder": "#2ddb24",
-    "activityBar.background": "#e04149",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#2ddb24",
+    "activityBar.background": "#ff6433",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#00ff3d",
     "activityBarBadge.foreground": "#15202b",
-    "statusBar.background": "#cd212a",
+    "statusBar.background": "#ff3d00",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#e04149",
-    "titleBar.activeBackground": "#cd212a",
+    "statusBarItem.hoverBackground": "#ff6433",
+    "titleBar.activeBackground": "#ff3d00",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#cd212a99",
+    "titleBar.inactiveBackground": "#ff3d0099",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "sash.hoverBorder": "#e04149",
-    "statusBarItem.remoteBackground": "#cd212a",
+    "sash.hoverBorder": "#ff6433",
+    "statusBarItem.remoteBackground": "#ff3d00",
     "statusBarItem.remoteForeground": "#e7e7e7",
     "commandCenter.border": "#e7e7e799"
   },
-  "peacock.color": "#cd212a",
+  "peacock.color": "#ff3d00",
   "C_Cpp.default.compilerPath": "cl.exe"
 }
