--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "chalk": "^5.0.0"
+    "chalk": "^5.0.0",
+    "glob": "^11.0.2"
   },
   "license": "Beerware"
 }
